force-app/main/default/objects/Soundboard__c/Soundboard__c.object-meta.xml
<CustomObject>
    <label>Soundboard</label>
    <nameField>
        <displayFormat>SB-{0000}</displayFormat>
        <label>Soundboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Soundboards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>