force-app/main/default/objects/Soundboard__c/fields/AllowsAnonymous__c.field-meta.xml
<CustomField>
    <fullName>AllowsAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Anonymous</label>
    <type>Checkbox</type>
</CustomField>