force-app/main/default/objects/Soundboard__c/fields/IsAllowlistEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAllowlistEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allowlist Enabled</label>
    <type>Checkbox</type>
</CustomField>