force-app/main/default/objects/Soundboard__c/fields/IsBlocklistEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsBlocklistEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blocklist Enabled</label>
    <type>Checkbox</type>
</CustomField>