force-app/main/default/objects/Soundboard__c/fields/IsSoundOn__c.field-meta.xml
<CustomField>
    <fullName>IsSoundOn__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sound On</label>
    <type>Checkbox</type>
</CustomField>