force-app/main/default/objects/Soundboard__c/fields/NoMatterWhat__c.field-meta.xml
<CustomField>
    <fullName>NoMatterWhat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Matter What</label>
    <type>Checkbox</type>
</CustomField>