force-app/main/default/objects/Soundboard__c/fields/PlayOwnSounds__c.field-meta.xml
<CustomField>
    <fullName>PlayOwnSounds__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Play Own Sounds</label>
    <type>Checkbox</type>
</CustomField>