force-app/main/default/objects/Soundboard__c/fields/SendAnonymous__c.field-meta.xml
<CustomField>
    <fullName>SendAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Anonymous</label>
    <type>Checkbox</type>
</CustomField>