force-app/main/default/objects/Soundboard__c/fields/SendToId__c.field-meta.xml
<CustomField>
    <fullName>SendToId__c</fullName>
    <label>Send to Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>